--- a/references.bib
+++ b/references.bib
@@ -2924,3 +2924,14 @@
   year = {2023},
   url = {https://mc-stan.org/docs/reference-manual/index.html}
 }
+
+@article{vehtari2017practical,
+  title={Practical Bayesian model evaluation using leave-one-out cross-validation and WAIC},
+  author={Vehtari, Aki and Gelman, Andrew and Gabry, Jonah},
+  journal={Statistics and computing},
+  volume={27},
+  pages={1413--1432},
+  year={2017},
+  publisher={Springer}
+}
+
