--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -8,7 +8,7 @@ This work was made possible by funding provided by the EPSRC and Bill & Melinda 
 There are many worse ways to spend billions of dollars than fighting poverty and disease.
 
 Thanks to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
-I left Cambridge with Google document templates, raised aspirations, new friends, and only slightly terrified about the future.
+I left Cambridge with appropriately raised aspirations, Google document templates, and only slightly terrified about the future.
 Thanks to Lenni, Lenny, Janika, Geetha, Simon, Phil, Frances, Leilani and Tammy.
 
 Thanks to Alex Stringer, and the Department of Statistics and Actuarial Science, for hosting my visit to the University of Waterloo.
