--- a/references.bib
+++ b/references.bib
@@ -2935,3 +2935,18 @@
   publisher={Springer}
 }
 
+@article{vehtari2012survey,
+author = {Aki Vehtari and Janne Ojanen},
+title = {{A survey of Bayesian predictive methods for model assessment, selection and comparison}},
+volume = {6},
+journal = {Statistics Surveys},
+number = {none},
+publisher = {Amer. Statist. Assoc., the Bernoulli Soc., the Inst. Math. Statist., and the Statist. Soc. Canada},
+pages = {142 -- 228},
+keywords = {Bayesian, cross-validation, decision theory, Expected utility, information criteria, model assessment, Model selection, predictive},
+year = {2012},
+doi = {10.1214/12-SS102},
+URL = {https://doi.org/10.1214/12-SS102}
+}
+
+
