Not perfect but a decent shot at finishing off the survey section

--- a/front-and-back-matter/_welcome-ebook.Rmd
+++ b/front-and-back-matter/_welcome-ebook.Rmd
@@ -41,10 +41,11 @@ If you notice any typos or other issues with the work, feel free to open an [iss
 | VMMC    | Voluntary Medical Male Circumcision              |
 | PHIA    | Population-based HIV Impact Assessment           |
 | SSA     | Sub-Saharan Africa                               |
+| DDC     | Data Defect Correlation                          |
 | MCMC    | Markov Chain Monte Carlo                         |
 | NUTS    | No-U-Turn Sampler                                |
-| VI      | Variational Inference                             |
-| INLA    | Integrated Nested Laplace Approximation           |
+| VI      | Variational Inference                            |
+| INLA    | Integrated Nested Laplace Approximation          |
 | GP      | Gaussian Process                                 |
 | CAR     | Conditionally Auto-regressive                    |
 | ICAR    | Intrisic Conditionally Auto-regressive           |
