--- a/front-and-back-matter/abbreviations.tex
+++ b/front-and-back-matter/abbreviations.tex
@@ -38,6 +38,7 @@
 \item[PHIA] Population-based HIV Impact Assessment.
 \item[SSA] Sub-Saharan Africa.
 
+\item[DDC] Data Defect Correlation.
 \item[MCMC] Markov Chain Monte Carlo.
 \item[NUTS] No-U-Turn Sampler.
 \item[VI] Variational Inference.
