--- a/references.bib
+++ b/references.bib
@@ -2949,4 +2949,22 @@ doi = {10.1214/12-SS102},
 URL = {https://doi.org/10.1214/12-SS102}
 }
 
+@article{bradley2021unrepresentative,
+  title={Unrepresentative big surveys significantly overestimated US vaccine uptake},
+  author={Bradley, Valerie C and Kuriwaki, Shiro and Isakov, Michael and Sejdinovic, Dino and Meng, Xiao-Li and Flaxman, Seth},
+  journal={Nature},
+  volume={600},
+  number={7890},
+  pages={695--700},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
 
+@article{bailey2023new,
+  title={A new paradigm for polling},
+  author={Bailey, Michael A},
+  journal={Harvard Data Science Review},
+  volume={5},
+  number={3},
+  year={2023}
+}
