--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -471,10 +471,10 @@ Large national household surveys (Section \@ref(hiv-data)) provide the highest q
 Demographic and Health Surveys [DHS; @measure2012sampling] are funded by the United States Agency for International Development (USAID) and run every three to five years in most countries.
 Population-based HIV Impact Assessment (PHIA) surveys are funded by PEPFAR and run every four to five years in high HIV burden countries.
 
-Specific methods are required to analyse the responses from these surveys. 
+Analysis of responses from survey methods can require specific methods.
+This section provides required background, before describing the survey design approach used by household surveys in SSA, and the methdos used to analyse this data in this thesis.
 
-
-### Survey notation and key terms
+### Background
 
 Consider a population of $N$ individuals, indexed by $i$, with outcomes of interest $y_i$.
 If a census were run, with all responses recorded, then any population quantities of interest could be directly calculated.
@@ -489,21 +489,14 @@ The population mean of $G$ is
 \end{equation}
 and a direct estimate of $\bar G$ based on the recorded subset of the population is
 \begin{equation}
-\bar G_R = \frac{\sum_{i = 1}^N R_i G(y_i)}{\sum_{i = 1}^N R_i}, \label{eq:direct}
+\bar G_R = \frac{\sum_{i = 1}^N R_i G(y_i)}{\sum_{i = 1}^N R_i}, (\#eq:direct)
 \end{equation}
 where $m_R = \sum_{i = 1}^N R_i$ is the recorded sample size.
 
 In a probability sample, individuals are selected to be included in the survey at random.
 On the other hand, in a non-probability sample, inclusion or exclusion from the survey is deterministic.
-A simple random sample (SRS) is a probability sample where the sampling probability for each individual is equal
-\begin{equation}
-P(S_i = 1) = \frac{1}{N}.
-\end{equation}
-A survey design is called complex when the sampling probabilities for each individual vary, such that
-\begin{equation}
-P(S_i = 1) = \pi_i,
-\end{equation}
-with $\sum_{i = 1}^N \pi_i = 1$ and $\pi_i > 0$.
+A simple random sample (SRS) is a probability sample where the sampling probability for each individual is equal $\mathbb{P}(S_i = 1) = 1 / N$.
+A survey design is called complex when the sampling probabilities for each individual vary, such that $\mathbb{P}(S_i = 1) = \pi_i$, with $\sum_{i = 1}^N \pi_i = 1$ and $\pi_i > 0$.
 Complex survey designs can offer both greater practicality and statistical efficiency than a SRS.
 However, care is required in analysing data collected using complex survey designs.
 Under a complex design, not accounting for unequal sampling probabilities will result in bias.
@@ -511,57 +504,57 @@ That said, even under SRS, nonresponse analogous bias can be caused by non-respo
 
 ### Survey design
 
-<!-- Add figure here to demonstrate sampling of DHS data -->
-
 The DHS employs a two-stage sampling procedure.
-In the first stage, ennumeration areas (EAs) from a recently conducted census are typically used as the primary sampling unit (PSU).
-The EAs are then stratified by region, as well as by urban-rural status.
-After appropriate sample sizes are determined, EAs sampled with probability proportional to size (PPS). 
-In the second stage, the secondary sampling units (SSUs) are households.
-All households in the selected EAs are listed, before being sampled systematically.
-Finally, each selected household is visited, and all adults are interviewed.
-
-The probability an individual is sampled is equal to the probability their household is sampled.
-The first-stage sampling probability of the $j$th cluster in stratum $h$ given by
+In the first stage, typically ennumeration areas from a recently conducted census are used as the primary sampling unit, or cluster.
+The clusters are assigned strata $h$ by region, as well as by urban-rural status.
+After appropriate sample sizes $n_h$ are determined, EAs are sampled with probability proportional to size
 \begin{equation}
 \pi_{1hj} = n_h \times \frac{N_{hj}}{\sum_j N_{hj}},
 \end{equation}
-where $N_{hj}$ is the number of households and $n_h$ be the number of clusters selected in stratum $h$.
-The second-stage sampling probability each household within the $i$th cluster in stratum $h$ is
+where $N_{hj}$ is the number of households selected in strata $h$ and cluster $j$.
+In the second stage, the secondary sampling units are households.
+All households in the selected cluster are listed, before being sampled systematically at a regular interval, with equal probability
 \begin{equation}
 \pi_{1hj} = \frac{n_{hj}}{N_{hj}},
 \end{equation}
 where $n_{hj}$ is the number of households selected in cluster $j$ and stratum $h$.
-That is, each household in the cluster has equal selection probability.
-The overall selection probability of each household in cluster $j$ of stratum $h$ is $\pi_{hi} = \pi_{1hj} \times \pi_{2hj}$.
+All adults are interviewed in each selected household.
+As a result, the probability an individual is sampled is equal to the probability their household is sampled $\pi_{hj} = \pi_{1hj} \times \pi_{2hj}$.
 
 ### Survey analysis
 
-Suppose a complex survey is run with sampling probabilities $\pi_i$.
-The standard method for taking into account that some individuals are more likely to be included in the survey than others is to overweight the responses of those unlikely to be included, and underweight the responses of those likely to be included.
-This can be achieved using design weights $\delta_i = 1 / \pi_i$, which can be thought of as the number of individuals in the population represented by the $i$th sampled individual.
-Let $P(R_i = 1 \, | \, S_i = 1) = \upsilon_i$ be the probability of response for sampled individual $i$.
-The problem of nonresponse can be treated in the same way using nonresponse weights $\gamma_i = 1 / \upsilon_i$, which analogously can be thought of as the number of sampled individuals represented by the $i$th recorded individual.
+Suppose a survey is run with complex design, and sampling probabilities $\pi_i$.
+Some individuals are more likely to be included in the survey than others.
+By over-weighting the responses of those unlikely to be included, and under-weighting the responses of those likely to be included, this feature can be taken into account.
+Design weights $\delta_i = 1 / \pi_i$ can be thought of as the number of individuals in the population represented by the $i$th sampled individual.
+Let
+\begin{equation}
+\mathbb{P}(R_i = 1 \, | \, S_i = 1) = \upsilon_i
+\end{equation}
+be the probability of response for sampled individual $i$.
+Nonresponse can be handled using nonresponse weights $\gamma_i = 1 / \upsilon_i$, which analogously can be thought of as the number of sampled individuals represented by the $i$th recorded individual.
 Multiplying the design and nonresponse weights gives survey weights $\omega_i = \delta_i \times \gamma_i$.
 
-A weighted estimate [@hajek1971discussion] of the population mean using the survey weights $\omega_i$ is given by
+Extending Equation \@ref(eq:direct), a weighted estimate [@hajek1971discussion] of the population mean using the survey weights $\omega_i$ is
 \begin{equation}
-\bar G_\omega = \frac{\sum_{i = 1}^N \omega_j R_i G(y_i)}{\sum_{i = 1}^N \omega_i R_i}. \label{eq:hajek}
+\bar G_\omega = \frac{\sum_{i = 1}^N \omega_j R_i G(y_i)}{\sum_{i = 1}^N \omega_i R_i}. (\#eq:hajek)
 \end{equation}
-Decomposing the additive error of this estimate provides useful intuition as to the potential benefits of survey weighting.
-Following @meng2018statistical then under SRS
+Following @meng2018statistical and @bradley2021unrepresentative, decomposing the additive error $\bar G_\omega - \bar G$ of Equation \@ref(eq:hajek) provides useful intuition as to the benefits of survey weighting [@bailey2023new].
+Under SRS then, the error is a product of three terms
 \begin{align}
 \bar G_\omega - \bar G &= \frac{\mathbb{E}(\omega_i R_i G_i)}{\mathbb{E}(\omega_i R_i)} - \mathbb{E}(G_i) = \frac{\mathbb{C}(\omega_i R_i G_i)}{\mathbb{E}(\omega_i R_i)} \\ 
 &= \rho_{R_\omega, G} \times \sqrt{\frac{N - m_{R_\omega}}{m_{R_\omega}}} \times \sigma_G,
 \end{align}
 where $R_\omega = \omega R$.
-The data defect correlation (DDC) $\rho_{R_\omega, G}$ measures the correlation between the weighted recording mechanism and given function of the outcome of interest.
-To minimise the DDC then $G \perp \!\!\! \perp R_\omega$.
-The data scarcity $\sigma_{R_\omega} = \sqrt{(N - m_{R_\omega})/m_{R_\omega}}$ measures the effective proportion of the population who have been recorded.
-The problem difficultly $\sigma_G$ measures the intrinsic difficulty of the estimation problem, and is independent of the sampling or analysis method.
+The first term is called the data defect correlation (DDC), and measures the correlation between the weighted recording mechanism and given function of the outcome of interest.
+The DDC is minimised when $G \perp \!\!\! \perp R_\omega$.
+The second term is the data scarcity, and measures the effective proportion of the population who have been recorded.
+Finally, the third term is the problem difficultly, and measures the intrinsic difficulty of the estimation problem.
+This term is independent of the sampling or analysis method used.
 
-For simplicity, let $G(y_i) = y_i$ and each $y_i \in \{0, 1\}$.
-We weight then model following @chen2014use.
-While this approach acknowledges the survey design, it has some important limitations.
-We ignore clustering structure.
-All of this isn't great and that someone should figure this out [@gelman2007struggles].
+This thesis uses hierarchical Bayesian models defined using weighted direct survey estimates [@fay1979estimates].
+Following @chen2014use, the sampling distribution of Equation \@ref(eq:hajek) is arrived at by estimating its variance.
+Although this approach acknowledges the complex survey design, it has some important limitations.
+Foremost, it ignores clustering structure within the observations $i$.
+Furthermore, as a two-step procedure, it fails to fully propagate uncertainty from a Bayesian perspective.
+While progress has been made in dealing with survey data, the opening comment of @gelman2007struggles, that "survey weighting is a mess" remains in part relevant.
